errors.txt
In file included from test_edges.cpp:1:
./Graph.hpp:522:32: error: reference to type 'const Graph<int, int>::edge_data' could not bind to an lvalue of type 'uid_type' (aka 'unsigned int')
        edges_[uid_a].adj_list.remove(uid_b);
                                      ^~~~~
./Graph.hpp:501:3: note: in instantiation of member function 'Graph<int, int>::remove_edge_' requested here
                remove_edge_(uid_a, uid_b);
                ^
test_edges.cpp:60:14: note: in instantiation of member function 'Graph<int, int>::remove_edge' requested here
  sf_print(g.remove_edge(e.node1(), e.node2()),
             ^
/usr/include//c++/4.8/bits/stl_list.h:1348:25: note: passing argument to parameter '__value' here
      remove(const _Tp& __value);
                        ^
In file included from test_edges.cpp:1:
./Graph.hpp:523:32: error: reference to type 'const Graph<int, int>::edge_data' could not bind to an lvalue of type 'uid_type' (aka 'unsigned int')
        edges_[uid_b].adj_list.remove(uid_a);
                                      ^~~~~
/usr/include//c++/4.8/bits/stl_list.h:1348:25: note: passing argument to parameter '__value' here
      remove(const _Tp& __value);
                        ^
In file included from test_edges.cpp:1:
In file included from ./Graph.hpp:11:
In file included from /usr/include//c++/4.8/list:64:
/usr/include//c++/4.8/bits/list.tcc:248:17: error: invalid operands to binary expression ('Graph<int, int>::edge_data' and 'const Graph<int, int>::edge_data')
          if (*__first == __value)
              ~~~~~~~~ ^  ~~~~~~~
./Graph.hpp:522:25: note: in instantiation of member function 'std::list<Graph<int, int>::edge_data, std::allocator<Graph<int, int>::edge_data> >::remove' requested here
        edges_[uid_a].adj_list.remove(uid_b);
                               ^
./Graph.hpp:501:3: note: in instantiation of member function 'Graph<int, int>::remove_edge_' requested here
                remove_edge_(uid_a, uid_b);
                ^
test_edges.cpp:60:14: note: in instantiation of member function 'Graph<int, int>::remove_edge' requested here
  sf_print(g.remove_edge(e.node1(), e.node2()),
             ^
/usr/include//c++/4.8/bits/postypes.h:216:5: note: candidate template ignored: could not match 'fpos<type-parameter-0-0>' against 'Graph<int, int>::edge_data'
    operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
    ^
/usr/include//c++/4.8/bits/stl_pair.h:214:5: note: candidate template ignored: could not match 'pair<type-parameter-0-0, type-parameter-0-1>' against 'Graph<int, int>::edge_data'
    operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
    ^
/usr/include//c++/4.8/bits/stl_iterator.h:291:5: note: candidate template ignored: could not match 'reverse_iterator<type-parameter-0-0>' against 'Graph<int, int>::edge_data'
    operator==(const reverse_iterator<_Iterator>& __x,
    ^
/usr/include//c++/4.8/bits/stl_iterator.h:341:5: note: candidate template ignored: could not match 'reverse_iterator<type-parameter-0-0>' against 'Graph<int, int>::edge_data'
    operator==(const reverse_iterator<_IteratorL>& __x,
    ^
/usr/include//c++/4.8/bits/stl_iterator.h:1031:5: note: candidate template ignored: could not match 'move_iterator<type-parameter-0-0>' against 'Graph<int, int>::edge_data'
    operator==(const move_iterator<_IteratorL>& __x,
    ^
/usr/include//c++/4.8/bits/stl_iterator.h:1037:5: note: candidate template ignored: could not match 'move_iterator<type-parameter-0-0>' against 'Graph<int, int>::edge_data'
    operator==(const move_iterator<_Iterator>& __x,
    ^
/usr/include//c++/4.8/bits/allocator.h:128:5: note: candidate template ignored: could not match 'allocator<type-parameter-0-0>' against 'Graph<int, int>::edge_data'
    operator==(const allocator<_T1>&, const allocator<_T2>&)
    ^
/usr/include//c++/4.8/bits/allocator.h:133:5: note: candidate template ignored: could not match 'allocator<type-parameter-0-0>' against 'Graph<int, int>::edge_data'
    operator==(const allocator<_Tp>&, const allocator<_Tp>&)
    ^
/usr/include//c++/4.8/bits/basic_string.h:2486:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'Graph<int, int>::edge_data'
    operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
    ^
/usr/include//c++/4.8/bits/basic_string.h:2493:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, char_traits<type-parameter-0-0>, allocator<type-parameter-0-0> >' against 'Graph<int, int>::edge_data'
    operator==(const basic_string<_CharT>& __lhs,
    ^
/usr/include//c++/4.8/bits/basic_string.h:2507:5: note: candidate template ignored: could not match 'const _CharT *' against 'Graph<int, int>::edge_data'
    operator==(const _CharT* __lhs,
    ^
/usr/include//c++/4.8/bits/basic_string.h:2519:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'Graph<int, int>::edge_data'
    operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
    ^
/usr/include//c++/4.8/bits/streambuf_iterator.h:204:5: note: candidate template ignored: could not match 'istreambuf_iterator<type-parameter-0-0, type-parameter-0-1>' against 'Graph<int, int>::edge_data'
    operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
    ^
/usr/include//c++/4.8/bits/stl_vector.h:1404:5: note: candidate template ignored: could not match 'vector<type-parameter-0-0, type-parameter-0-1>' against 'Graph<int, int>::edge_data'
    operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
    ^
/usr/include//c++/4.8/bits/random.tcc:2030:5: note: candidate template ignored: could not match 'normal_distribution<type-parameter-0-0>' against 'Graph<int, int>::edge_data'
    operator==(const std::normal_distribution<_RealType>& __d1,
    ^
/usr/include//c++/4.8/array:228:5: note: candidate template ignored: could not match 'array<type-parameter-0-0, _Nm>' against 'Graph<int, int>::edge_data'
    operator==(const array<_Tp, _Nm>& __one, const array<_Tp, _Nm>& __two)
    ^
/usr/include//c++/4.8/tuple:811:5: note: candidate template ignored: could not match 'tuple<type-parameter-0-0...>' against 'Graph<int, int>::edge_data'
    operator==(const tuple<_TElements...>& __t,
    ^
/usr/include//c++/4.8/functional:2530:5: note: candidate template ignored: could not match 'function<type-parameter-0-0 (type-parameter-0-1...)>' against 'Graph<int, int>::edge_data'
    operator==(const function<_Res(_Args...)>& __f, nullptr_t) noexcept
    ^
/usr/include//c++/4.8/functional:2536:5: note: candidate template ignored: could not match 'function<type-parameter-0-0 (type-parameter-0-1...)>' against 'const Graph<int, int>::edge_data'
    operator==(nullptr_t, const function<_Res(_Args...)>& __f) noexcept
    ^
/usr/include//c++/4.8/bits/stl_list.h:276:5: note: candidate template ignored: could not match '_List_iterator<type-parameter-0-0>' against 'Graph<int, int>::edge_data'
    operator==(const _List_iterator<_Val>& __x,
    ^
/usr/include//c++/4.8/bits/stl_list.h:1602:5: note: candidate template ignored: could not match 'list<type-parameter-0-0, type-parameter-0-1>' against 'Graph<int, int>::edge_data'
    operator==(const list<_Tp, _Alloc>& __x, const list<_Tp, _Alloc>& __y)
    ^
3 errors generated.
make: *** [test_edges.o] Error 1
